deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:madhudocker-app-deployment
  namespace: madhu
  labels:
    app: madhudocker-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: madhudocker-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: madhudocker-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: env
                    operator: In
                    values:
                      - prob
      containers:
        - name: madhudocker-app
          image: madhuporendla/madhupdocker-app
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /_status/healthz
              port: 5000
            initialDelaySeconds: 8
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /readiness
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 5
