service.yml
apiVersion: v1
kind: Service
metadata:
  name: madhupdocker-app
  namespace: madhu
spec:
  selector:
    app: madhupdocker-app
  type : LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
